Created Contact page

--- a/Post.html
+++ b/Post.html
@@ -3,11 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Travelgram Post</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="Post.css">
 </head>
 <body>
-    <h1>
-        Successfully logined!!
-    </h1>
+    <div class="container">
+        <div class="top_bar">
+            <div class="profile_image">
+                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pexels.com%2Fsearch%2Fgirl%2F&psig=AOvVaw0-R825wNXw-xwg7y-UtMdj&ust=1713236802584000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCKC0rs6ew4UDFQAAAAAdAAAAABAE" alt="">
+                <span>Coding BD</span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
